
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
typedef int rtga_t ;
typedef int rpng_t ;
typedef int rjpeg_t ;
typedef int rbmp_t ;
typedef enum image_type_enum { ____Placeholder_image_type_enum } image_type_enum ;







 int rbmp_process_image (int *,void**,size_t,unsigned int*,unsigned int*) ;
 int rjpeg_process_image (int *,void**,size_t,unsigned int*,unsigned int*) ;
 int rpng_process_image (int *,void**,size_t,unsigned int*,unsigned int*) ;
 int rtga_process_image (int *,void**,size_t,unsigned int*,unsigned int*) ;

int image_transfer_process(
      void *data,
      enum image_type_enum type,
      uint32_t **buf, size_t len,
      unsigned *width, unsigned *height)
{
   switch (type)
   {
      case 129:





         break;

      case 131:




         break;

      case 128:




         break;

      case 132:




         break;

      case 130:
         break;
   }

   return 0;
}
